Populated index.html with resume content

--- a/index.html
+++ b/index.html
@@ -2,56 +2,78 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Title</title>
+    <title>Kelly L Vaden</title>
     <link href="stylesheets/reset.css" rel="stylesheet" />
     <link href="stylesheets/style.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <hgroup>
-            <h1>Header</h1>
-            <h2>Subheader</h2>
-        </hgroup>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Menu Option 1</a></li>
-            <li><a href="#">Menu Option 2</a></li>
-        </ul>
-    </nav>
-    <section>
-        <article>
-            <header>
-                <h1>Article #1</h1>
-            </header>
-            <section>
-                This is the first article.
-            </section>
-        </article>
-        <article>
-            <header>
-                <h1>Article #2</h1>
-            </header>
-            <section>
-                This is the second article.
-            </section>
-        </article>
-    </section>
     <aside>
-        <section>
-            <h1>Links</h1>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-            </ul>
-        </section>
-        <figure>
-            <img width="85" height="85" 
-                src="http://domain.tld/path/to/image.jpg" 
-                alt="foobar" />
-            <figcaption>Foobar</figcaption>
-        </figure>
+        <h1>Kelly Vaden</h1>
+        <h3>Software Developer</h3>
+        <h2>Personal Info</h2>
+        <ul>
+            <li><h4>Address</h4>Pittsburgh, PA 15221</li>
+            <li><h4>Phone</h4>(617) 953-8575</li>
+            <li><h4>Email</h4>klvaden@gmail.com</li>
+            <li><h4>Portfolio</h4>kvaden.herokuapp.com</li>
+            <li><h4>GitHub</h4>https://github.com/kvaden19</li>
+            <li><h4>LinkedIn</h4>https://www.linkedin.com/in/klvaden</li>
+        </ul>
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Bootstrap</li>
+            <li>Tailwind CSS</li>
+            <li>JavaScript ES6 and jQuery</li>
+            <li>Node.js</li>
+            <li>Express.js</li>
+            <li>React</li>
+            <li>MySQL and Sequelize</li>
+            <li>PostgresQL</li>
+            <li>MongoDB and Mongoose</li>
+            <li>Python</li>
+            <li>GitHub</li>
+            <li>JIRA</li>
+        </ul>
     </aside>
-    <footer>Footer</footer>
+    <main>
+        <p>Web developer with a background in engineering and data analysis. Completed a certificate in full stack development from Rutgers University, adding the MERN Stack to existing knowledge of SQL and Python. Sharp communication and collaboration skills from years working as an engineer and project manager.
+        </p>
+        <h2>Projects</h2>
+            <h3>Weather Dashboard</h3>
+                <p>www.deployedapp.com</p>
+                <p>Shows current and forecasted weather for a user’s search city and tracks past searches. Built with jQuery, Bootstrap CSS, and the Open Weather API.</p>
+                <p>Code repository: https://kvaden19.github.io/weather-dashboard</p>
+            <h3>Password Generator</h3>
+                <p>www.deployedapp.com</p>
+                <p>Creates a randomized password based on user requirements. Built with JavaScript.</p>
+                <p>Code repository: https://kvaden19.github.io/password-generator</p>
+            <h3>Soccer Info Betting Hub</h3>
+                <p>www.deployedapp.com</p>
+                <p>An online hub for European Football information, including upcoming games and team stats. Collaborated with a small group, contributing code to use JavaScript’s Fetch API and a third-party API to show the user stats on upcoming matches.</p>
+                <p>Code repository: https://kvaden19.github.io/weather-dashboard</p>
+        <h2>Work Experience</h2>
+            <h3>Product Analyst</h3>
+                <p>06/2021-present</p>
+                <h5>Health Monitoring Systems</h5>
+                <p>Deliver $100k in Professional Services per year by developing SQL and Tableau-based reports for public health clients</p>
+                <p>Devised a brand-new requirements gathering process to speed up the professional services project lifecycle 1.5X</p>
+            <h3>Product Analyst</h3>
+                <p>11/2018-05/2021</p>
+                <h5>Direct Energy Business</h5>
+                <p>Refactored manual Excel-based workflows into automated SQL and MS Access-based workflows, saving the team an average of 15 hours per month</p>
+                <p>Configured and tested product-specific billing configurations in internal CMS; establishing the foundation for timely and accurate billing for over 200k service locations and $400M in monthly revenue</p>
+            <h3>Product Analyst</h3>
+                <p>01/2014-10/2018</p>
+                <h5>FirstFuel Software</h5>
+                <p>Refactored company's energy savings recommendations engine from a rules management system to Python; allowing for increases in accuracy, processing speed, and an expanded recommendations library</p>
+                <p>Analyzed energy usage data for 400+ buildings, transforming thousands of data points into actionable recommendations for $4M in energy savings</p>
+        <h2>Education</h2>
+            <h3>Rutgers University, Certificate, Full Stack Web Development</h3>
+                <p>07/2021</p>
+            <h3>Johns Hopkins University, BS, Mechanical Engineering</h3>
+                <p>05/2009</p>
+    </main>
 </body>
 </html>
