Styled overall page for Print to PDF. Perfected sidebar.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Kelly L Vaden</title>
-    <link href="stylesheets/reset.css" rel="stylesheet" />
-    <link href="stylesheets/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
     <aside>
@@ -13,11 +13,11 @@
         <h2>Personal Info</h2>
         <ul>
             <li><h4>Address</h4>Pittsburgh, PA 15221</li>
-            <li><h4>Phone</h4>(617) 953-8575</li>
+            <li><h4>Phone</h4>(412) 447-8616</li>
             <li><h4>Email</h4>klvaden@gmail.com</li>
-            <li><h4>Portfolio</h4>kvaden.herokuapp.com</li>
-            <li><h4>GitHub</h4>https://github.com/kvaden19</li>
-            <li><h4>LinkedIn</h4>https://www.linkedin.com/in/klvaden</li>
+            <li><h4>Portfolio</h4>klvaden.herokuapp.com</li>
+            <li><h4>GitHub</h4>github.com/klvaden</li>
+            <li><h4>LinkedIn</h4>linkedin.com/in/klvaden</li>
         </ul>
         <h2>Skills</h2>
         <ul>
