Finished styling of main section.

--- a/index.html
+++ b/index.html
@@ -38,42 +38,76 @@
         </ul>
     </aside>
     <main>
-        <p>Web developer with a background in engineering and data analysis. Completed a certificate in full stack development from Rutgers University, adding the MERN Stack to existing knowledge of SQL and Python. Sharp communication and collaboration skills from years working as an engineer and project manager.
+        <p class='about'>Web developer with a background in engineering and data analysis. Completed a certificate in full stack development from Rutgers University, adding the MERN Stack to existing knowledge of SQL and Python. Sharp communication and collaboration skills from years working as an engineer and project manager.
         </p>
         <h2>Projects</h2>
-            <h3>Weather Dashboard</h3>
-                <p>www.deployedapp.com</p>
-                <p>Shows current and forecasted weather for a user’s search city and tracks past searches. Built with jQuery, Bootstrap CSS, and the Open Weather API.</p>
-                <p>Code repository: https://kvaden19.github.io/weather-dashboard</p>
-            <h3>Password Generator</h3>
-                <p>www.deployedapp.com</p>
-                <p>Creates a randomized password based on user requirements. Built with JavaScript.</p>
-                <p>Code repository: https://kvaden19.github.io/password-generator</p>
-            <h3>Soccer Info Betting Hub</h3>
-                <p>www.deployedapp.com</p>
-                <p>An online hub for European Football information, including upcoming games and team stats. Collaborated with a small group, contributing code to use JavaScript’s Fetch API and a third-party API to show the user stats on upcoming matches.</p>
-                <p>Code repository: https://kvaden19.github.io/weather-dashboard</p>
+        <hr>
+            <div class='flex-container'>
+                <div class='date-block'></div>
+                <div class='content-block project'>
+                    <h3>Select 4</h3>
+                    <p>An online lottery app created for a web development bootcamp group project. My role in this project was to handle everything data-related, from deciding how data would flow throughout the app to creating models in Sequelize to seeding the database. I also wrote RESTful APIs to allow connecting the database to the React front-end.</p>
+                    <li>Deployed app: select-4.herokuapp.com</li>
+                    <li>Code repository: github.com/kvaden19/Select-4</li>
+                </div>
+            </div>
+            <div class='flex-container'>
+                <div class='date-block'></div>
+                <div class='content-block project'>
+                    <h3>React User Directory</h3>
+                    <p>This simple app was built as a proof-of-concept React app. It demos the functionality of a user directory by fetching a sample of profiles from the Random User API, and allowing for sorting and filtering of those users. It was refactored from a vanilla JS to a React app.</p>
+                    <li>Deployed app: kvaden19.github.io/react-user-directory</li>
+                    <li>Code repository: github.com/kvaden19/react-user-directory</li>
+                </div>
+            </div>
+            <div class='flex-container'>
+                <div class='date-block'></div>
+                <div class='content-block project'>
+                    <h3>Weather Dashboard</h3>
+                    <p>A weather dashboard that allows a user to look up current and future weather conditions based on city name. The user's last ten searches persist in local storage and are shown on the page.</p>
+                    <li>Deployed app: kvaden19.github.io/weather-dashboard</li>
+                    <li>Code repository: github.com/kvaden19/weather-dashboard</li>
+                </div>
+            </div>
         <h2>Work Experience</h2>
-            <h3>Product Analyst</h3>
-                <p>06/2021-present</p>
-                <h5>Health Monitoring Systems</h5>
-                <p>Deliver $100k in Professional Services per year by developing SQL and Tableau-based reports for public health clients</p>
-                <p>Devised a brand-new requirements gathering process to speed up the professional services project lifecycle 1.5X</p>
-            <h3>Product Analyst</h3>
-                <p>11/2018-05/2021</p>
-                <h5>Direct Energy Business</h5>
-                <p>Refactored manual Excel-based workflows into automated SQL and MS Access-based workflows, saving the team an average of 15 hours per month</p>
-                <p>Configured and tested product-specific billing configurations in internal CMS; establishing the foundation for timely and accurate billing for over 200k service locations and $400M in monthly revenue</p>
-            <h3>Product Analyst</h3>
-                <p>01/2014-10/2018</p>
-                <h5>FirstFuel Software</h5>
-                <p>Refactored company's energy savings recommendations engine from a rules management system to Python; allowing for increases in accuracy, processing speed, and an expanded recommendations library</p>
-                <p>Analyzed energy usage data for 400+ buildings, transforming thousands of data points into actionable recommendations for $4M in energy savings</p>
+        <hr>
+            <div class='flex-container'>
+                <div class='date-block'><p>06/2021-present</p></div>
+                <div class='content-block job'>
+                    <h3>Product Analyst</h3>
+                    <h5>Health Monitoring Systems</h5>
+                    <li>Deliver $100k in Professional Services per year by developing SQL and Tableau-based reports for public health clients</li>
+                    <li>Devised a brand-new requirements gathering process to speed up the professional services project lifecycle 1.5X</li>
+                </div>
+            </div>
+            <div class='flex-container'>
+                <div class='date-block'><p>11/2018-05/2021</p></div>
+                <div class='content-block job'>
+                    <h3>Product Analyst</h3>
+                    <h5>Direct Energy Business</h5>
+                    <li>Refactored manual Excel-based workflows into automated SQL and MS Access-based workflows, saving the team an average of 15 hours per month</li>
+                    <li>Configured and tested product-specific billing configurations in internal CMS; establishing the foundation for timely and accurate billing for over 200k service locations and $400M in monthly revenue</li>
+                </div>
+            </div>
+            <div class='flex-container'>
+                <div class='date-block'><p>01/2014-10/2018</p></div>
+                <div class='content-block job'>
+                    <h3>Product Analyst</h3>
+                    <h5>FirstFuel Software</h5>
+                    <li>Refactored company's energy savings recommendations engine from a rules management system to Python; allowing for increases in accuracy, processing speed, and an expanded recommendations library</li>
+                    <li>Analyzed energy usage data for 400+ buildings, transforming thousands of data points into actionable recommendations for $4M in energy savings</li>
+                </div>
+            </div>
         <h2>Education</h2>
-            <h3>Rutgers University, Certificate, Full Stack Web Development</h3>
-                <p>07/2021</p>
-            <h3>Johns Hopkins University, BS, Mechanical Engineering</h3>
-                <p>05/2009</p>
+        <hr>
+            <div class='flex-container'>
+                <div class='date-block'><p>07/2021</p></div>
+                <div class='content-block'><h3>Rutgers University, Certificate, Full Stack Web Development</h3></div>
+            </div>
+            <div class='flex-container'>
+                <div class='date-block'><p>05/2009</p></div>
+                <div class='content-block'><h3>Johns Hopkins University, BS, Mechanical Engineering</h3></div>
+            </div>
     </main>
 </body>
 </html>
